# CreationStation

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  Release-Products.md  Versioning.md
.github/workflows/: release.yml
Driver/: README.md
Driver/Audio/: DjehutiAudioCableContract.h  EndpointMap.md  First-Cable.md  MVP-Cable.md  README.md  SysVAD-Handoff.md  SysVAD-Integration-Plan.md  SysVAD-Path.md
Driver/Contract/: DjehutiRouterDriverContract.h
Driver/INF/: DjehutiRouter.inf
Driver/Package/: Bootstrapper-Notes.md  README.md
Driver/Project/: DjehutiRouterDriver.sln  README.md
Driver/Source/: DevicePlan.md  DjehutiRouterDriver.cpp  DjehutiRouterDriver.h  DriverEntry.cpp  README.md
Driver/SysVAD/: README.md
Driver/SysVAD/Adapter/: DjehutiRouterAdapter.h  README.md
Driver/SysVAD/Buffer/: DjehutiRouterRingBuffer.h  README.md
Driver/SysVAD/Install/: DjehutiRouterInstall.md  README.md
Driver/SysVAD/Miniport/: DjehutiRouterMiniport.h  README.md
Driver/SysVAD/Streaming/: DjehutiRouterStream.h  README.md
Driver/SysVAD/Topology/: DjehutiRouterTopology.h  README.md
Driver/SysVAD/Upstream/: DjehutiWdkShim.props  DjehutiWdkShim.targets  savedata.cpp  sysvad.h
Driver/SysVAD/Upstream/EndpointsCommon/: MiniportAudioEngineNode.cpp  minwavertstream.cpp  speakerwavtable.h
Driver/SysVAD/Upstream/TabletAudioSample/: ComponentizedAudioSample.inx  micinwavtable.h  minipairs.h
Source/: Branding.cpp  Branding.h  Main.cpp  MainComponent.cpp  MainComponent.h
Source/AI/: AiProviderSettings.h  CreationStationAppManifest.cpp  CreationStationAppManifest.h  CreationStationContextEngine.cpp  CreationStationContextEngine.h  CreationStationContextStore.cpp  CreationStationContextStore.h  CreationStationTaskPlanner.cpp  CreationStationTaskPlanner.h  LiteSemRagApiClient.cpp  LiteSemRagApiClient.h  OpenAiChatClient.cpp  OpenAiChatClient.h  OpenAiModelCatalogClient.cpp  OpenAiModelCatalogClient.h
Source/Audio/: PatchRuntimePlayer.cpp  PatchRuntimePlayer.h  SignalGraphRuntime.cpp  SignalGraphRuntime.h  StudioIOModel.cpp  StudioIOModel.h  VstPluginCatalog.cpp  VstPluginCatalog.h  WorkstationAudioEngine.cpp  WorkstationAudioEngine.h
Source/Auth/: DesktopAuthSession.cpp  DesktopAuthSession.h
Source/Content/: ContentApiClient.cpp  ContentApiClient.h  ContentLibrary.cpp  ContentLibrary.h
Source/ControlSurface/: ControlSurfaceMappingStore.cpp  ControlSurfaceMappingStore.h  XTouchControlSurface.cpp  XTouchControlSurface.h
Source/Language/: DslCompiler.cpp  DslCompiler.h  PatinaArtifactLoader.cpp  PatinaArtifactLoader.h  PatinaArtifactWriter.cpp  PatinaArtifactWriter.h  PatinaBinder.cpp  PatinaBinder.h  PatinaBuiltins.cpp  PatinaBuiltins.h  PatinaIr.cpp  PatinaIr.h  PatinaLexer.cpp  PatinaLexer.h  PatinaLowering.cpp  PatinaLowering.h  PatinaParser.cpp  PatinaParser.h  PatinaSurfaceAst.h  PatinaTypes.cpp  PatinaTypes.h  SignalGraph.cpp  SignalGraph.h
Source/Patch/: PatchModel.cpp  PatchModel.h
Source/PluginKit/: CreationStationPluginHeader.cpp  CreationStationPluginHeader.h  CreationStationPluginLookAndFeel.cpp  CreationStationPluginLookAndFeel.h  CreationStationPluginPalette.h  LevelMeterComponent.cpp  LevelMeterComponent.h
Source/Plugins/: CreationStationInstrumentProcessor.cpp  CreationStationInstrumentProcessor.h
Source/Plugins/Compressor/: CreationStationCompressorEditor.cpp  CreationStationCompressorEditor.h  CreationStationCompressorProcessor.cpp  CreationStationCompressorProcessor.h
Source/Project/: ProjectManager.cpp  ProjectManager.h
Source/Router/: RouterAudioEngine.cpp  RouterAudioEngine.h  RouterCableModel.cpp  RouterCableModel.h  RouterDriverContract.h  RouterEndpointRegistry.cpp  RouterEndpointRegistry.h  RouterMain.cpp  RouterMainComponent.cpp  RouterMainComponent.h
Source/Timeline/: TimelineModel.cpp  TimelineModel.h  TimelineTypes.h
Source/Tutorial/: GuidedTutorial.cpp  GuidedTutorial.h  TutorialScriptCompiler.cpp  TutorialScriptCompiler.h
Source/Views/: AiPanel.cpp  AiPanel.h  ArrangeView.cpp  ArrangeView.h  AuthGateView.cpp  AuthGateView.h  ContentPanel.cpp  ContentPanel.h  DockingWorkspace.cpp  DockingWorkspace.h  DslPanel.cpp  DslPanel.h  GraphPanel.cpp  GraphPanel.h  MixerPanel.cpp  MixerPanel.h  PluginsPanel.cpp  PluginsPanel.h  RecordView.cpp  RecordView.h  ScorePanel.cpp  ScorePanel.h  SettingsPanel.cpp  SettingsPanel.h  SignalLabPanel.cpp  SignalLabPanel.h  TourGuideOverlay.cpp  TourGuideOverlay.h  TrackerPanel.cpp  TrackerPanel.h
architecture/: README.md
architecture/diagrams/: component-map.mmd  system-context.mmd
architecture/model/: components.yaml  deployment.yaml  system.yaml
cmake/: CreationStationPlugin.cmake
docs/: Creation-Station-0.5.0-Beta-Checklist.md  Studio-Grade-Audio-Routing-Checklist.md
wiki/: Creation-Station-AI-Context-Architecture.md  Home.md  Linux-Port-Notes.md  Patina-Core-and-Audio-Architecture.md  Patina-IR-Cpp-Type-Model.md  Patina-Implementation-Spec-v0.md  Patina-Surface-AST-Model.md  Patina-Surface-Syntax-and-EBNF.md
